--- a/Mvc4Bootstrap/Views/Account/Login.cshtml
+++ b/Mvc4Bootstrap/Views/Account/Login.cshtml
@@ -17,13 +17,13 @@
 			<div class="form-group">
 			<div class="controls">
 		 
-                  @Html.TextBoxFor(m => m.UserName, new { @class = "form-control" })
+                  @Html.TextBoxFor(m => m.UserName, new { @class = "form-control", @placeholder = "Kullanıcı Adı" })
                 @Html.ValidationMessageFor(m => m.UserName)
 			</div>
 			</div>
         <div class="form-group">
 			<div class="controls">
-			   @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
+			   @Html.PasswordFor(m => m.Password, new { @class = "form-control", @placeholder = "Şifre" })
                 @Html.ValidationMessageFor(m => m.Password)
 			</div>
 			</div>
@@ -37,9 +37,13 @@
 			<div class="form-group">
 			<div class="controls">
 			<button type="submit" class="btn btn-primary form-control">Giriş</button>
+             
 			</div>
 			</div>
-			<hr/>
+        <hr />
+        <p class="clearfix">
+            <a href="/account/register" class="goto-login pull-left">  Yeni Kullanıcı</a>
+        </p>
            
      
     </div>
