--- a/Mvc4Bootstrap/Views/Account/Register.cshtml
+++ b/Mvc4Bootstrap/Views/Account/Register.cshtml
@@ -1,54 +1,53 @@
 ﻿@model A1fxCrm.Web.Models.RegisterModel
 
 @{
-    ViewBag.Title = "Yeni Kullanıcı";
+    ViewBag.Title = "Giriş";
+    Layout = "~/Views/Shared/_LoginLayout.cshtml";
 }
+
+@Html.ValidationSummary(true, "Login was unsuccessful. Please correct the errors and try again.")
+<div class="login-wrapper">
+    <div style="width:111px; margin:0 auto 10px auto;">
+        <img src="/content/images/headerlogo11.png" alt="logo" width="111" height="78" />
+        @using (Html.BeginForm())
+        {
  
-
-<script src="@Url.Content("~/Scripts/jquery.validate.min.js")" type="text/javascript"></script>
-<script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
-
-@using (Html.BeginForm()) {
-    @Html.ValidationSummary(true, "Account creation was unsuccessful. Please correct the errors and try again.")
-    <div>
-        <fieldset>
-            <legend>Kullanıcı Bilgileri</legend>
-
-            <div class="editor-label">
-               Kullanıcı Adı
+            <h3>Kayıt</h3>
+            <hr />
+            <div class="form-group">
+                <div class="controls">
+                    @Html.TextBoxFor(m => m.UserName, new { @class = "form-control" , @placeholder = "Kullanıcı Adı"})
+                    @Html.ValidationMessageFor(m => m.UserName)
+                </div>
             </div>
-            <div class="editor-field">
-                @Html.TextBoxFor(m => m.UserName)
-                @Html.ValidationMessageFor(m => m.UserName)
+            <div class="form-group">
+                <div class="controls">
+                    @Html.TextBoxFor(m => m.Email, new { @class = "form-control", @email = "Kullanıcı Adı", @placeholder = "E-Mail" })
+                        @Html.ValidationMessageFor(m => m.Email)
+                </div>
             </div>
-
-            <div class="editor-label">
-               Email
+            <div class="form-group">
+                <div class="controls">
+                    @Html.PasswordFor(m => m.Password, new { @class = "form-control", @placeholder = "Şifre" })
+                    @Html.ValidationMessageFor(m => m.Password)
+                </div>
             </div>
-            <div class="editor-field">
-                @Html.TextBoxFor(m => m.Email)
-                @Html.ValidationMessageFor(m => m.Email)
+            <div class="form-group">
+                <div class="controls">
+                    @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control", @placeholder = "Şifre Tekrar" })
+                    @Html.ValidationMessageFor(m => m.ConfirmPassword)
+                </div>
             </div>
-
-            <div class="editor-label">
-               Şifre
+ 
+            <div class="form-group">
+                <div class="controls">
+                    <button type="submit" class="btn btn-primary form-control">Kaydet</button>
+                </div>
             </div>
-            <div class="editor-field">
-                @Html.PasswordFor(m => m.Password)
-                @Html.ValidationMessageFor(m => m.Password)
-            </div>
-
-            <div class="editor-label">
-                Şifre Tekrar
-            </div>
-            <div class="editor-field">
-                @Html.PasswordFor(m => m.ConfirmPassword)
-                @Html.ValidationMessageFor(m => m.ConfirmPassword)
-            </div>
-
-            <p>
-                <input type="submit" value="Kaydet"  class="btn btn-primary"/>
+            <hr />
+            <p class="clearfix">
+                <a href="/account/login" class="goto-login pull-left">← geri</a>
             </p>
-        </fieldset>
+        }
     </div>
-}
+</div>
