--- a/Mvc4Bootstrap/Views/Tickets/Edit.cshtml
+++ b/Mvc4Bootstrap/Views/Tickets/Edit.cshtml
@@ -23,17 +23,11 @@
             Not
         </div>
         <div class="editor-field">
-            @Html.EditorFor(model => model.Content)
+            @Html.TextAreaFor(model => model.Content, new { @cols = "400", @rows = "3", @style = "margin: 0px 0px 10px; width: 654px; height: 69px;" })
             @Html.ValidationMessageFor(model => model.Content)
         </div>
 
-        <div class="editor-label">
-           Başlık
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Title)
-            @Html.ValidationMessageFor(model => model.Title)
-        </div>
+        
  
         <div class="editor-field" style="visibility: hidden;">>
             @Html.DropDownList("CustomerId", String.Empty)
