--- a/Mvc4Bootstrap/Views/User/Edit.cshtml
+++ b/Mvc4Bootstrap/Views/User/Edit.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_LayoutBlue.cshtml";
 }
 
-
+ 
 <ul class="breadcrumb">
     <li><a href="#">Anasayfa</a> <span class="divider">/</span></li>
     <li class="active">Kullanıcılar</li>
@@ -13,35 +13,8 @@
  
 
 <div id="page-actions" class="clearfix">
-    <div btn-actions="" ng-transclude="" ng-style="BtnActionLeft()" class="btn-toolbar pull-left" style="left: auto;">
-        <button class="btn btn-small btn-success ng-scope" data-ng-click="add()">
-            <i class="icon-plus"></i>&nbsp;Ekle
-        </button>
-        <button class="btn btn-small ng-scope" data-ng-click="Refresh()">
-            <i class="icon-refresh"></i>&nbsp;Yenile
-        </button>
-        <div class="btn-group ng-scope ng-hide" data-ng-show="selectedItems.length &gt; 0">
-            <button class="btn btn-small" data-ng-click="edit(selectedItems[0])" data-ng-disabled="selectedItems.length &gt; 1">
-                <i class="icon-edit"></i>&nbsp;Düzenle
-            </button>
-            <button class="btn btn-small ng-isolate-scope ng-scope" co-delete-button="" confirm-message="You really want to delete this entity?" delete-action="delete()">
-                <i class="icon-remove"></i>&nbsp;Sil
-            </button>
-        </div>
-
-    </div>
-    <div class="btn-toolbar pull-right">
-    
-
-        <div class="input-append" style="margin: 0px 0px 0px 10px;">
-
-            <form style="margin: 0px">
-                <input type="text" style="line-height: 16px; font-size: 13px;">
-
-                <button type="submit" class="btn">Ara</button>
-            </form>
-        </div>
-    </div>
+  
+     
 </div>
 
 @using (Html.BeginForm())
@@ -105,7 +78,7 @@
              @Html.DropDownList("roleId",ViewBag.Roles as SelectList,"Seçiniz")
         </div>
         <div class="editor-label">
-            <input type="submit" value="Save" />
+            <input type="submit" value="Kaydet" />
         </div>
     </fieldset>
 }
