--- a/Mvc4Bootstrap/Views/Account/Login.cshtml
+++ b/Mvc4Bootstrap/Views/Account/Login.cshtml
@@ -30,7 +30,7 @@
 			<div class="form-group">
 			<div class="controls">
 			<label class="checkbox">
-			 @Html.CheckBoxFor(m => m.RememberMe) Hatırla
+			 <input data-val="true" data-val-required="The Remember me? field is required." id="RememberMe" name="RememberMe" type="checkbox" value="true"><input name="RememberMe" type="hidden" value="false"> Hatır
 			</label>
 			</div>
 			</div>
