--- a/Mvc4Bootstrap/Views/Shared/_MenuPanel.cshtml
+++ b/Mvc4Bootstrap/Views/Shared/_MenuPanel.cshtml
@@ -19,6 +19,12 @@
                 <span>Müşteriler</span>
             </a>
         </li>
+        <li>
+            <a href="/customer/ReRegisterList">
+                <i class="icon-text-width"></i>
+                <span>Tekrar Başvurular</span>
+            </a>
+        </li>
         @{ if (Html.IsAdmin())
            {
             <li>
